fixed a small css scrollbar problem

--- a/src/style.css
+++ b/src/style.css
@@ -3,8 +3,6 @@
     padding: 0;
     box-sizing: border-box;
     font-family: sans-serif;
-}
-body{
     -ms-overflow-style: none;
     scrollbar-width: none;
 }
